pat2prism/gen/pat2prism/grammar/PATParser.py
# Generated from pat2prism/grammar/PAT.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PATParser ( Parser ):

    grammarFileName = "PAT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Skip'", "'SKIP'", "'skip'", "'if'", 
                     "'else'", "'#assert'", "'||'", "'and'", "'true'", "'false'", 
                     "'->'", "<INVALID>", "'[]'", "<INVALID>", "'?'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'or'", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
                     "':'", "'='", "'channel'", "'var'", "'enum'", "'assert'", 
                     "'call'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ARROW", "PAR_OP", 
                      "CHOICE_OP", "SEND", "RECV", "EQ", "NE", "LT", "GT", 
                      "LE", "GE", "AND", "OR", "NOT", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACK", "RBRACK", "SEMICOLON", "COMMA", "DOT", "COLON", 
                      "ASSIGN", "CHANNEL", "VAR", "ENUM", "ASSERT", "CALL", 
                      "NUMBER", "IDENT", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_spec = 0
    RULE_declaration = 1
    RULE_channelDecl = 2
    RULE_typeDecl = 3
    RULE_enumBody = 4
    RULE_initExpr = 5
    RULE_arrayInit = 6
    RULE_exprList = 7
    RULE_processDecl = 8
    RULE_paramList = 9
    RULE_processBody = 10
    RULE_parallelComposition = 11
    RULE_sequentialComposition = 12
    RULE_primaryProcess = 13
    RULE_skipProcess = 14
    RULE_ifElseProcess = 15
    RULE_action = 16
    RULE_communicationAction = 17
    RULE_channelName = 18
    RULE_msgExpr = 19
    RULE_assignmentAction = 20
    RULE_internalAction = 21
    RULE_codeStatement = 22
    RULE_ifStatement = 23
    RULE_guardedProcess = 24
    RULE_processCall = 25
    RULE_argList = 26
    RULE_choiceProcess = 27
    RULE_primaryBase = 28
    RULE_blockProcess = 29
    RULE_assertDecl = 30
    RULE_expr = 31
    RULE_orExpr = 32
    RULE_andExpr = 33
    RULE_comparisonExpr = 34
    RULE_additiveExpr = 35
    RULE_multiplicativeExpr = 36
    RULE_unaryExpr = 37
    RULE_primaryExpr = 38

    ruleNames =  [ "spec", "declaration", "channelDecl", "typeDecl", "enumBody", 
                   "initExpr", "arrayInit", "exprList", "processDecl", "paramList", 
                   "processBody", "parallelComposition", "sequentialComposition", 
                   "primaryProcess", "skipProcess", "ifElseProcess", "action", 
                   "communicationAction", "channelName", "msgExpr", "assignmentAction", 
                   "internalAction", "codeStatement", "ifStatement", "guardedProcess", 
                   "processCall", "argList", "choiceProcess", "primaryBase", 
                   "blockProcess", "assertDecl", "expr", "orExpr", "andExpr", 
                   "comparisonExpr", "additiveExpr", "multiplicativeExpr", 
                   "unaryExpr", "primaryExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    ARROW=11
    PAR_OP=12
    CHOICE_OP=13
    SEND=14
    RECV=15
    EQ=16
    NE=17
    LT=18
    GT=19
    LE=20
    GE=21
    AND=22
    OR=23
    NOT=24
    PLUS=25
    MINUS=26
    MULT=27
    DIV=28
    MOD=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    RBRACE=33
    LBRACK=34
    RBRACK=35
    SEMICOLON=36
    COMMA=37
    DOT=38
    COLON=39
    ASSIGN=40
    CHANNEL=41
    VAR=42
    ENUM=43
    ASSERT=44
    CALL=45
    NUMBER=46
    IDENT=47
    LINE_COMMENT=48
    BLOCK_COMMENT=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PATParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PATParser.DeclarationContext,i)


        def getRuleIndex(self):
            return PATParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = PATParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 173722837188672) != 0):
                self.state = 78
                self.declaration()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(PATParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def channelDecl(self):
            return self.getTypedRuleContext(PATParser.ChannelDeclContext,0)


        def processDecl(self):
            return self.getTypedRuleContext(PATParser.ProcessDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(PATParser.TypeDeclContext,0)


        def assertDecl(self):
            return self.getTypedRuleContext(PATParser.AssertDeclContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = PATParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.channelDecl()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.processDecl()
                pass
            elif token in [42, 43]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.typeDecl()
                pass
            elif token in [6, 44]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.assertDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHANNEL(self):
            return self.getToken(PATParser.CHANNEL, 0)

        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def SEMICOLON(self):
            return self.getToken(PATParser.SEMICOLON, 0)

        def NUMBER(self):
            return self.getToken(PATParser.NUMBER, 0)

        def getRuleIndex(self):
            return PATParser.RULE_channelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChannelDecl" ):
                listener.enterChannelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChannelDecl" ):
                listener.exitChannelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannelDecl" ):
                return visitor.visitChannelDecl(self)
            else:
                return visitor.visitChildren(self)




    def channelDecl(self):

        localctx = PATParser.ChannelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_channelDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PATParser.CHANNEL)
            self.state = 93
            self.match(PATParser.IDENT)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 94
                self.match(PATParser.NUMBER)


            self.state = 97
            self.match(PATParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(PATParser.SEMICOLON, 0)

        def VAR(self):
            return self.getToken(PATParser.VAR, 0)

        def ENUM(self):
            return self.getToken(PATParser.ENUM, 0)

        def LBRACE(self):
            return self.getToken(PATParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PATParser.RBRACE, 0)

        def ASSIGN(self):
            return self.getToken(PATParser.ASSIGN, 0)

        def initExpr(self):
            return self.getTypedRuleContext(PATParser.InitExprContext,0)


        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def enumBody(self):
            return self.getTypedRuleContext(PATParser.EnumBodyContext,0)


        def LBRACK(self):
            return self.getToken(PATParser.LBRACK, 0)

        def NUMBER(self):
            return self.getToken(PATParser.NUMBER, 0)

        def RBRACK(self):
            return self.getToken(PATParser.RBRACK, 0)

        def arrayInit(self):
            return self.getTypedRuleContext(PATParser.ArrayInitContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_typeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDecl" ):
                listener.enterTypeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDecl" ):
                listener.exitTypeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = PATParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDecl)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                _la = self._input.LA(1)
                if not(_la==42 or _la==43):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==47:
                    self.state = 100
                    self.match(PATParser.IDENT)


                self.state = 110
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [32]:
                    self.state = 103
                    self.match(PATParser.LBRACE)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==47:
                        self.state = 104
                        self.enumBody()


                    self.state = 107
                    self.match(PATParser.RBRACE)
                    pass
                elif token in [40]:
                    self.state = 108
                    self.match(PATParser.ASSIGN)
                    self.state = 109
                    self.initExpr()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 112
                self.match(PATParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                _la = self._input.LA(1)
                if not(_la==42 or _la==43):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 114
                self.match(PATParser.IDENT)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==34:
                    self.state = 115
                    self.match(PATParser.LBRACK)
                    self.state = 116
                    self.match(PATParser.NUMBER)
                    self.state = 117
                    self.match(PATParser.RBRACK)


                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40:
                    self.state = 120
                    self.match(PATParser.ASSIGN)
                    self.state = 121
                    self.arrayInit()


                self.state = 124
                self.match(PATParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.IDENT)
            else:
                return self.getToken(PATParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.COMMA)
            else:
                return self.getToken(PATParser.COMMA, i)

        def getRuleIndex(self):
            return PATParser.RULE_enumBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumBody" ):
                listener.enterEnumBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumBody" ):
                listener.exitEnumBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumBody" ):
                return visitor.visitEnumBody(self)
            else:
                return visitor.visitChildren(self)




    def enumBody(self):

        localctx = PATParser.EnumBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PATParser.IDENT)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 128
                self.match(PATParser.COMMA)
                self.state = 129
                self.match(PATParser.IDENT)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PATParser.ExprContext,0)


        def arrayInit(self):
            return self.getTypedRuleContext(PATParser.ArrayInitContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_initExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitExpr" ):
                listener.enterInitExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitExpr" ):
                listener.exitInitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitExpr" ):
                return visitor.visitInitExpr(self)
            else:
                return visitor.visitChildren(self)




    def initExpr(self):

        localctx = PATParser.InitExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initExpr)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10, 24, 26, 30, 46, 47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.expr()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.arrayInit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(PATParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(PATParser.RBRACK, 0)

        def exprList(self):
            return self.getTypedRuleContext(PATParser.ExprListContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_arrayInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayInit" ):
                listener.enterArrayInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayInit" ):
                listener.exitArrayInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInit" ):
                return visitor.visitArrayInit(self)
            else:
                return visitor.visitChildren(self)




    def arrayInit(self):

        localctx = PATParser.ArrayInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayInit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(PATParser.LBRACK)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 211107390162432) != 0):
                self.state = 140
                self.exprList()


            self.state = 143
            self.match(PATParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.ExprContext)
            else:
                return self.getTypedRuleContext(PATParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.COMMA)
            else:
                return self.getToken(PATParser.COMMA, i)

        def getRuleIndex(self):
            return PATParser.RULE_exprList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprList" ):
                listener.enterExprList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprList" ):
                listener.exitExprList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = PATParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.expr()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 146
                self.match(PATParser.COMMA)
                self.state = 147
                self.expr()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(PATParser.IDENT, 0)

        def LPAREN(self):
            return self.getToken(PATParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PATParser.RPAREN, 0)

        def ASSIGN(self):
            return self.getToken(PATParser.ASSIGN, 0)

        def processBody(self):
            return self.getTypedRuleContext(PATParser.ProcessBodyContext,0)


        def SEMICOLON(self):
            return self.getToken(PATParser.SEMICOLON, 0)

        def paramList(self):
            return self.getTypedRuleContext(PATParser.ParamListContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_processDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessDecl" ):
                listener.enterProcessDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessDecl" ):
                listener.exitProcessDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessDecl" ):
                return visitor.visitProcessDecl(self)
            else:
                return visitor.visitChildren(self)




    def processDecl(self):

        localctx = PATParser.ProcessDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_processDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(PATParser.IDENT)
            self.state = 154
            self.match(PATParser.LPAREN)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==47:
                self.state = 155
                self.paramList()


            self.state = 158
            self.match(PATParser.RPAREN)
            self.state = 159
            self.match(PATParser.ASSIGN)
            self.state = 160
            self.processBody()
            self.state = 161
            self.match(PATParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.IDENT)
            else:
                return self.getToken(PATParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.COMMA)
            else:
                return self.getToken(PATParser.COMMA, i)

        def getRuleIndex(self):
            return PATParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PATParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(PATParser.IDENT)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 164
                self.match(PATParser.COMMA)
                self.state = 165
                self.match(PATParser.IDENT)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parallelComposition(self):
            return self.getTypedRuleContext(PATParser.ParallelCompositionContext,0)


        def getRuleIndex(self):
            return PATParser.RULE_processBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessBody" ):
                listener.enterProcessBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessBody" ):
                listener.exitProcessBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessBody" ):
                return visitor.visitProcessBody(self)
            else:
                return visitor.visitChildren(self)




    def processBody(self):

        localctx = PATParser.ProcessBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_processBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.parallelComposition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParallelCompositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequentialComposition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PATParser.SequentialCompositionContext)
            else:
                return self.getTypedRuleContext(PATParser.SequentialCompositionContext,i)


        def PAR_OP(self, i:int=None):
            if i is None:
                return self.getTokens(PATParser.PAR_OP)
            else:
                return self.getToken(PATParser.PAR_OP, i)

        def getRuleIndex(self):
            return PATParser.RULE_parallelComposition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParallelComposition" ):
                listener.enterParallelComposition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParallelComposition" ):
                listener.exitParallelComposition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParallelComposition" ):
                return visitor.visitParallelComposition(self)
            else:
                return visitor.visitChildren(self)




    def parallelComposition(self):
